--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                   <h5 class="card">Contact Our Seller</h5>
                   <p class="card-text">They are here to help you. That's quite 
       
-                    literally what we pay them for.</p>
+                    literally what we pay them for. H</p>
                   
                 </div>
               </div>
